namespace SOLID.I;

public interface ICargo
{
    public void CargoLoad();
    public void CargoUnload();
}