namespace SOLID.I;

public interface IPassenger
{
    public void PassengerBoarding();
    public void PassengerUnboarding();
}