namespace SOLID.I;

public abstract class Transport
{
    public string Name { get; set; }
}